--- a/fastly.toml
+++ b/fastly.toml
@@ -7,3 +7,9 @@ language = "javascript"
 manifest_version = 2
 name = "fastly-hackday"
 service_id = ""
+[local_server]
+  [local_server.backends]
+    [local_server.backends.origin]
+      url = "https://content.guardianapis.com"
+    [local_server.backends.origin-CODE]
+      url = "https://content.code.dev-guardianapis.com"
